package com.yowpainter.modules.auth.domain.model;

public enum UserRole {
    ROLE_ADMIN,
    ROLE_ARTIST,
    ROLE_BUYER
}
